[project]
name = "novatel_edie_customizer"
description = "Tool for creating a custom installation of novatel_edie package"
version = "0.0.1"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "typer>=0.15"
]


[project.scripts]
novatel_edie_customizer = "novatel_edie_customizer.cli:app"
