set(TARGET_NAME "hw_interface_dynamic_library")
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_library(obj${TARGET_NAME} OBJECT ${SOURCES})
add_library(${TARGET_NAME} SHARED $<TARGET_OBJECTS:obj${TARGET_NAME}> $<TARGET_OBJECTS:objstream_interface> $<TARGET_OBJECTS:objcommon>)
add_custom_command(TARGET ${TARGET_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/api/ ${CMAKE_SOURCE_DIR}/bin/api/hw_interface/${TARGET_NAME}/api/)
set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER "hw_interface")
set_property(TARGET obj${TARGET_NAME} PROPERTY FOLDER "hw_interface")
target_include_directories(obj${TARGET_NAME} PUBLIC api)

if(WIN32)
    add_compile_definitions(HWINTERFACE_EXPORTS)
else()
    add_compile_definitions(HWINTERFACE_STATIC_DEFINE)
endif()
