set(TARGET_NAME "hw_interface_dynamic_library")
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_library(${TARGET_NAME} SHARED ${SOURCES})
target_link_libraries(${TARGET_NAME} PRIVATE common stream_interface)
add_custom_command(TARGET ${TARGET_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/api/ ${CMAKE_SOURCE_DIR}/bin/api/hw_interface/${TARGET_NAME}/api/)
set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER "hw_interface")
target_include_directories(${TARGET_NAME} PUBLIC api)

if(WIN32)
    add_compile_definitions(HWINTERFACE_EXPORTS)
else()
    add_compile_definitions(HWINTERFACE_STATIC_DEFINE)
endif()
