set(TARGET_NAME "stream_interface")
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_library(obj${TARGET_NAME} OBJECT ${SOURCES})
add_library(${TARGET_NAME} STATIC $<TARGET_OBJECTS:obj${TARGET_NAME}> $<TARGET_OBJECTS:objcommon>)
add_custom_command(TARGET ${TARGET_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/api/ ${CMAKE_SOURCE_DIR}/bin/api/hw_interface/${TARGET_NAME}/api/)
set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER "hw_interface")
set_property(TARGET obj${TARGET_NAME} PROPERTY FOLDER "hw_interface")
target_include_directories(obj${TARGET_NAME} PUBLIC api)
